[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-infino"
version = "0.1.0"
description = "LangChain integration for Infino — vector, BM25, and hybrid retrieval over one engine on object storage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "The Infino Authors" }]
keywords = ["langchain", "infino", "vectorstore", "retrieval", "rag", "hybrid-search", "bm25", "vector-search"]
dependencies = [
    "langchain-core>=0.3",
    "infino>=0.1.3",
    "pyarrow>=14",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/infino-ai/langchain-infino"
Repository = "https://github.com/infino-ai/langchain-infino"

[project.optional-dependencies]
# langchain-tests carries the standard VectorStore compliance suites; the
# suite's async cases need an asyncio plugin to run.
test = ["pytest", "pytest-asyncio", "langchain-tests"]
lint = ["ruff", "mypy"]

[tool.pytest.ini_options]
# The compliance suite ships async test cases; run them without per-test marks.
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["langchain_infino"]

[tool.mypy]
strict = true

# pyarrow ships no type information; treat it as untyped rather than
# failing the strict run on a third-party gap.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "infino", "infino.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Pydantic evaluates field annotations at runtime, and PEP 604 unions
# (`X | None`) fail there on Python 3.9 — keep Optional/Union forms.
[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
