[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-infino"
version = "0.1.0"
description = "LangChain integration for Infino — vector, BM25, and hybrid retrieval over one engine on object storage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Team Infino AI" }]
keywords = [
    "langchain", "infino", "vectorstore", "retrieval", "rag", "hybrid-search",
    "bm25", "vector-search", "vector-database", "semantic-search", "embeddings",
    "retriever", "self-query", "semantic-cache", "object-storage", "s3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3",
    "infino>=0.1.3",
    "pyarrow>=14",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/infino-ai/langchain-infino"
Repository = "https://github.com/infino-ai/langchain-infino"
Issues = "https://github.com/infino-ai/langchain-infino/issues"
Changelog = "https://github.com/infino-ai/langchain-infino/releases"

[project.optional-dependencies]
# langchain-tests carries the standard VectorStore compliance suites; the
# suite's async cases need an asyncio plugin to run.
test = ["pytest", "pytest-asyncio", "langchain-tests"]
lint = ["ruff", "mypy"]

[tool.pytest.ini_options]
# The compliance suite ships async test cases; run them without per-test marks.
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["langchain_infino"]

[tool.mypy]
strict = true

# pyarrow ships no type information; treat it as untyped rather than
# failing the strict run on a third-party gap.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "infino", "infino.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Pydantic evaluates field annotations at runtime, and PEP 604 unions
# (`X | None`) fail there on Python 3.9 — keep Optional/Union forms.
[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
